Web Worker fails to fire error event when a resource fetch fails. https://bugs.webkit.org/show_bug.cgi?id=62475

Reviewed by Dmitry Titov.

Source/WebCore:

Test: http/tests/workers/worker-workerScriptNotThere.html

* workers/WorkerScriptLoader.cpp:
(WebCore::WorkerScriptLoader::didFinishLoading): Ensure that
the client is notified of the error when it happens during loading.

LayoutTests:

* http/tests/workers/worker-workerScriptNotThere-expected.txt: Added.
* http/tests/workers/worker-workerScriptNotThere.html: Added.

Canonical link: https://commits.webkit.org/77984@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88579 268f45cc-cd09-0410-ab3c-d52691b4dbfc